--- a/assets/style.css
+++ b/assets/style.css
@@ -16,6 +16,7 @@ body {
 	padding: 4rem 0 0.25rem;
 	width: min(80%, 1024px);
 	color: #222;
+	word-break: break-word;
 }
 
 a {
@@ -47,9 +48,6 @@ nav {
 	height: 3rem;
 }
 
-h1 {
-	overflow-wrap: anywhere;
-}
 nav a,
 h1 a {
 	color: inherit;
